logs/dag_id=etl_22024-08-21/run_id=scheduled__2024-08-02T00:00:00+00:00/task_id=final_etl_processing/attempt=1.log
[2024-08-21T06:27:07.923+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-21T06:27:08.728+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-02T00:00:00+00:00 [queued]>
[2024-08-21T06:27:08.834+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-02T00:00:00+00:00 [queued]>
[2024-08-21T06:27:08.846+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-21T06:27:09.452+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): final_etl_processing> on 2024-08-02 00:00:00+00:00
[2024-08-21T06:27:09.647+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=4315) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-08-21T06:27:09.691+0000] {standard_task_runner.py:63} INFO - Started process 4355 to run task
[2024-08-21T06:27:09.715+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_22024-08-21', 'final_etl_processing', 'scheduled__2024-08-02T00:00:00+00:00', '--job-id', '712', '--raw', '--subdir', 'DAGS_FOLDER/final_etl.py', '--cfg-path', '/tmp/tmpa0fs2kj7']
[2024-08-21T06:27:09.816+0000] {standard_task_runner.py:91} INFO - Job 712: Subtask final_etl_processing
[2024-08-21T06:27:11.193+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_22024-08-21.final_etl_processing scheduled__2024-08-02T00:00:00+00:00 [running]> on host 7e1333882d71
[2024-08-21T06:27:12.116+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_22024-08-21' AIRFLOW_CTX_TASK_ID='final_etl_processing' AIRFLOW_CTX_EXECUTION_DATE='2024-08-02T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-02T00:00:00+00:00'
[2024-08-21T06:27:12.131+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-21T06:27:12.288+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2024-08-21T06:27:12.292+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', "python3 /opt/***/data/etl_m12.py --connection postgresql+psycopg2://***:***@postgres/postgres --csv ''"]
[2024-08-21T06:27:12.316+0000] {subprocess.py:86} INFO - Output:
[2024-08-21T06:27:12.587+0000] {subprocess.py:93} INFO -   File "/opt/***/data/etl_m12.py", line 155
[2024-08-21T06:27:12.608+0000] {subprocess.py:93} INFO -     # main(args.csv, args.connection)
[2024-08-21T06:27:12.614+0000] {subprocess.py:93} INFO - IndentationError: expected an indented block after 'if' statement on line 147
[2024-08-21T06:27:12.638+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2024-08-21T06:27:12.659+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-21T06:27:12.826+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2024-08-21T06:27:12.872+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=etl_22024-08-21, task_id=final_etl_processing, run_id=scheduled__2024-08-02T00:00:00+00:00, execution_date=20240802T000000, start_date=20240821T062708, end_date=20240821T062712
[2024-08-21T06:27:12.989+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 712 for task final_etl_processing (Bash command failed. The command returned a non-zero exit code 1.; 4355)
[2024-08-21T06:27:13.061+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-21T06:27:13.228+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-21T06:27:13.244+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
